# ai_solution_architecture

./: .gitignore  CLAUDE.md  README.md  analysis_report.md  litellm_uuid.txt  random_password_generator.py  test_rag_debug.py
capstone/: __init__.py  code.txt  docker-compose.yml  pyproject.toml
capstone/agent_v2/: .env.example  README.md  agent.py  agent_factory.py  conversation_manager.py  hybrid_agent.py  litellm_uuid.txt  main.py  pyproject.toml  replanning.py  statemanager.py  taskforce_cli.py  tool.py
capstone/agent_v2/cli/: README.md  __init__.py  main.py  output_formatter.py  plugin_manager.py
capstone/agent_v2/cli/commands/: chat.py  config.py  dev.py  memory.py  missions.py  providers.py  rag.py  run.py  sessions.py  tools.py
capstone/agent_v2/cli/config/: settings.py
capstone/agent_v2/cli/plugins/: __init__.py  database.py
capstone/agent_v2/cli/tests/: __init__.py  test_config.py  test_main.py  test_output_formatter.py  test_plugin_manager.py
capstone/agent_v2/configs/: README.md  llm_config.yaml  rag_agent.yaml  standard_agent.yaml
capstone/agent_v2/docs/: architecture.md  brownfield-architecture.md  gpt5-api-findings.md  prd.md  rag_synthesis_example.py
capstone/agent_v2/docs/brownfield-architecture/: document-metadata.md  (+18 more)
capstone/agent_v2/memory/: __init__.py  memory_manager.py
capstone/agent_v2/planning/: planner.py  todolist.py
capstone/agent_v2/prompts/: README.md  __init__.py  rag_system_prompt copy.py  rag_system_prompt.py
capstone/agent_v2/services/: __init__.py  llm_service.py
capstone/agent_v2/tests/: conftest.py  test_agent_execute.py  test_agent_factory.py  test_agent_llm_service.py  test_approval_gate.py  test_azure_search_base.py  test_lesson_extraction.py  test_llm_service.py  test_llm_service_azure.py  test_llm_tool.py  test_memory_integration.py  test_memory_manager.py  test_package_upgrades.py  test_planner_tool.py  test_rag_agent_integration.py  test_rag_document_tools.py  test_rag_semantic_search_tool.py  test_rag_system_prompt.py
capstone/agent_v2/tools/: ask_user_tool.py  azure_search_base.py  code_tool.py  file_tool.py  git_tool.py  llm_tool.py  planner_tool.py  rag_get_document_tool.py  rag_list_documents_tool.py  rag_semantic_search_tool.py  shell_tool.py  web_tool.py
capstone/backend/: Dockerfile  README.md  pyproject.toml
capstone/backend/app/: __init__.py  config.py  main.py  settings.py
capstone/backend/documents/: arch.puml  idp_roadmap.md  llms.adk.txt  llms_full_adk.txt  project_description.md
capstone/backend/tests/: test_api.py  test_core_agent.py  test_executor.py  test_persistence.py  test_planner.py
capstone/documents/: TaskForce.pptx  adk_integration_plan.md  agent_refactoring_plan.md  agentic_rag_techn_design_document.md  component.puml  current_architecture.md  frontend_code.md  frontend_spec.md  mitigation.md  plan.md  plan_frontend.md  rag_agent_enhancement_prd.md  report.html  report.md  sequence.puml  spec.md  structure.md
capstone/documents/guidelines/: go-service-standards.md
capstone/documents/rag_agent_enhancement_prd/: 1-intro-project-analysis-and-context.md  2-requirements.md  3-technical-constraints-and-integration-requirements.md  4-epic-and-story-structure.md  42-epic-1-multimodal-rag-knowledge-retrieval-for-agent-framework.md  5-story-sequencing-and-dependencies.md  6-success-metrics.md  7-appendices.md  index.md  story-1.3-document-metadata-tools.md
capstone/documents/stories/: README.md  story-1-1-azure-search-sdk-base-infrastructure.md  story-1-2-1-early-rag-agent-integration.md  story-1-2-semantic-search-tool.md  story-1.3.1-generic-llm-tool.md  story-1.3.1-implementation-summary.md  story-1.4-rag-system-prompt.md  story-1.5-multimodal-synthesis.md  story-1.6-rag-agent-factory-and-integration.md
capstone/examples/idp_pack/: README.md  idp_tools.py  rich_idp_cli.py  run_idp_cli.py  system_prompt_git.txt  system_prompt_idp.txt
capstone/frontend/: streamlit_app.py
capstone/frontend/components/: sse_chat.py
capstone/frontend/src/: App.tsx  index.css
capstone/missions/: mission_analyze_csv.txt  mission_project_scaffolding.txt
capstone/prototype/: README.md  __init__.py  agent.py  checklists_simple.py  feedback_collector.py  git_tools.py  idp.py  llm_provider.py  prompt.py  pyproject.toml  requirements.txt  statemanager.py  todolist_actions.py  todolist_md.py  tools.py  tools_builtin.py
capstone/prototype/documents/: feature_request.md  mitigation.md  refactoring.md  stabilize.md
capstone/prototype/prompts/: orchestrator.txt
capstone/prototype/tool_packages/: __init__.py
capstone/templates/: python-flask-mvc.md
capstone/tests/: conftest.py  test_api.py  test_artifacts.py  test_e2e.py
(+296 files in other folders)
