[project]
name = "hybrid-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "fastapi>=0.116.1",
    "openai>=1.0",
    "PyYAML>=6.0",
    "toml>=0.10",
    "uvicorn[standard]>=0.35.0",
    "aiofiles==23.2.1",
    "structlog==24.2.0",
    "litellm==1.7.7.0"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
