[project]
name = "hybrid-agent"
version = "0.1.0"
description = "AI-powered agent platform with rich CLI interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "fastapi>=0.116.1",
    "openai>=1.0",
    "PyYAML>=6.0",
    "toml>=0.10",
    "uvicorn[standard]>=0.35.0",
    "aiofiles==23.2.1",
    "structlog==24.2.0",
    "litellm==1.7.7.0",
    # CLI Dependencies
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "setuptools>=65.0.0", # For pkg_resources
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[tool.setuptools.packages.find]
include = ["cli*", "planning*"]

[project.scripts]
agent = "cli.main:cli_main"
agent-dev = "cli.main:dev_main"

[project.entry-points."agent_cli_plugins"]
# Example plugin entry points (to be added by plugin packages)
# database = "capstone.agent_v2.cli.plugins.database:DatabasePlugin"
