[project]
name = "idp-copilot-backend"
version = "0.1.0"
description = "IDP Copilot Backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rudi Dittrich" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "chromadb>=0.5.5",
    "openai>=1.40.0",
    "google-adk>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0"
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]


