[project]
name = "capstone-backend"
version = "0.1.0"
description = "Agent Orchestration API"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "openai>=1.40.0",
  "structlog>=24.1.0",
  "prometheus-client>=0.20.0",
  "opentelemetry-sdk>=1.25.0",
  "aiofiles>=23.2.1",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "black>=24.4.2",
  "pytest>=8.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]


