[project]
name = "prototype"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "anthropic==0.30.0",
    "black==24.4.2",
    "circuitbreaker==2.0.0",
    "fastapi==0.111.0",
    "httpx==0.26.0",
    "ipython==8.25.0",
    "kubernetes==30.1.0",
    "langchain==0.2.5",
    "openai==1.35.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "prometheus-client==0.20.0",
    "pydantic==2.7.4",
    "pygithub==2.3.0",
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "redis==5.0.6",
    "ruff==0.4.10",
    "structlog==24.2.0",
    "uvicorn[standard]==0.30.1",
]
